Fix chat layout issues

--- a/client/src/App.styl
+++ b/client/src/App.styl
@@ -47,12 +47,14 @@ h1,h2,h3,h4,h5
         font-weight bold
         margin 0 5px 0 10px
       
-      > #chatInput
+      > .wrapper
         box-flex 1
-        margin 0px
-        background-color #111
-        border none
-        color #BBB
-        font-size 20px
-        outline none
-        width 100%
+
+        > #chatInput
+          margin 0
+          background-color #111
+          border none
+          color #BBB
+          font-size 20px
+          outline none
+          width 100%
