--- a/client/src/bootstrap.css
+++ b/client/src/bootstrap.css
@@ -7,7 +7,8 @@ h1,h2,h3,h4,h5{margin:0;padding:0}
 .App > .wrapForFF_see_579776{position:fixed;bottom:0;height:34px;width:100%;}
 .App > .wrapForFF_see_579776 > #chatInputGroup{background-color:#111;display:box;display:-webkit-box;display:-moz-box;-webkit-box-orient:horizontal;-moz-box-orient:horizontal;color:#bbb;font-size:20px;line-height:34px;width:100%;}
 .App > .wrapForFF_see_579776 > #chatInputGroup > .arrow{color:#666;font-weight:bold;margin:0 5px 0 10px}
-.App > .wrapForFF_see_579776 > #chatInputGroup > #chatInput{box-flex:1;-webkit-box-flex:1;-moz-box-flex:1;margin:0;background-color:#111;border:none;color:#bbb;font-size:20px;outline:none;width:100%}
+.App > .wrapForFF_see_579776 > #chatInputGroup > .wrapper{box-flex:1;-webkit-box-flex:1;-moz-box-flex:1;}
+.App > .wrapForFF_see_579776 > #chatInputGroup > .wrapper > #chatInput{margin:0;background-color:#111;border:none;color:#bbb;font-size:20px;outline:none;width:100%}
 .Login{background-color:#000;padding:20% 0 0 50px;box-sizing:content-box;-moz-box-sizing:content-box;-webkit-box-sizing:content-box;}
 .Login > .greet{color:#999;margin:0 0 5px 2px;}
 .Login > .greet > span{color:#fff;font-style:italic}
@@ -15,11 +16,11 @@ h1,h2,h3,h4,h5{margin:0;padding:0}
 .Login > .inputGroup > .submit{-moz-border-radius-topleft:2px;-moz-border-radius-topright:2px;-moz-border-radius-bottomright:2px;-moz-border-radius-bottomleft:2px;border-top-left-radius:2px;border-top-right-radius:2px;border-bottom-right-radius:2px;border-bottom-left-radius:2px;}
 .Login > .inputGroup > .submit:hover{background-color:#555;color:#fff;cursor:pointer}
 .ChatLog{font-size:18px;}
-.ChatLog > .chat{padding:2px 5px 2px 5px;color:#ddd;display:box;display:-webkit-box;display:-moz-box;-webkit-box-orient:horizontal;-moz-box-orient:horizontal;width:100%;}
+.ChatLog > .chat{padding:2px 5px 2px 5px;color:#ddd;display:box;display:-webkit-box;display:-moz-box;-webkit-box-orient:horizontal;-moz-box-orient:horizontal;width:100%;box-sizing:border-box;-moz-box-sizing:border-box;-webkit-box-sizing:border-box;}
 .ChatLog > .chat.self{color:#666;}
 .ChatLog > .chat.self > .from{color:#444}
-.ChatLog > .chat > .datetime{min-width:80px;color:#444;margin:0 10px 0 2px;font-size:12px}
-.ChatLog > .chat > .from{color:#888;font-weight:bold;overflow:hidden;margin-right:10px;white-space:nowrap;text-overflow:ellipsis;}
+.ChatLog > .chat > .datetime{min-width:48px;color:#444;margin:0 10px 0 2px;font-size:12px;line-height:24px}
+.ChatLog > .chat > .from{color:#888;font-weight:bold;overflow:hidden;margin:0 10px 0 0;white-space:nowrap;text-overflow:ellipsis;}
 .ChatLog > .chat > .from::after{content:":";font-weight:normal}
 .ChatLog > .chat > .msg{box-flex:1;-webkit-box-flex:1;-moz-box-flex:1;word-wrap:break-word}
 .StatusBar{background:#2b2b2b;background:-moz-linear-gradient(top,#333 0%,#222 100%);background:-webkit-gradient(linear,left top,left bottom,color-stop(0%,#333),color-stop(100%,#222));filter:progid:DXImageTransform.Microsoft.gradient( startColorstr='#333', endColorstr='#222',GradientType=0 );border-top:1px solid #3f3f3f;-webkit-box-shadow:0 2px 3px #111;-moz-box-shadow:0 2px 3px #111;box-shadow:0 2px 3px #111;}
